[package]
name = "rustls-ci-bench"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls CPU instruction counting benchmarks."
publish = false

[dependencies]
anyhow = "1.0.83"
byteorder = "1.4.3"
clap = { version = "4.5.4", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.12.1"
pki-types = { package = "rustls-pki-types", version = "0.2" }
rayon = "1.10.0"
rustls = { path = "../rustls" }
rustls-pemfile = "2.1.2"
